--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-
-    <title>[Beta] 딸램 플레이스</title>
+    <meta name="google-adsense-account" content="ca-pub-2200970422276014" />
+    <!-- og -->
+    <meta property="og:title" content="딸랑! : 소상공인 가게 찾기" />
+    <meta property="og:url" content="https://smallshop-archive.web.app/" />
+    <meta
+      property="og:image"
+      content="https://github.com/innerstella/smallshop-archive/blob/main/public/opengraph.png?raw=true"
+    />
+    <meta
+      property="og:description"
+      content="🔔 효녀들이 소개하는 부모님의 가게를 찾아보세요!"
+    />
+    <!-- twitter og -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="딸랑! : 소상공인 가게 찾기" />
+    <meta
+      name="twitter:description"
+      content="🔔 효녀들이 소개하는 부모님의 가게를 찾아보세요!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/innerstella/smallshop-archive/blob/main/public/opengraph.png?raw=true"
+    />
+    <title>딸랑! : 소상공인 가게 찾기</title>
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2200970422276014"
