--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://smallshop-archive.web.app/" />
     <meta
       property="og:image"
-      content="https://github.com/innerstella/smallshop-archive/blob/main/public/opengraph.png?raw=true"
+      content="https://github.com/innerstella/smallshop-archive/blob/main/public/opengraph.jpg?raw=true"
     />
     <meta
       property="og:description"
