feat: 어드민 페이지 개선

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
       name="twitter:image"
       content="https://github.com/innerstella/smallshop-archive/blob/main/public/opengraph.png?raw=true"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EHT20J48WG"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+
+      gtag("config", "G-EHT20J48WG")
+    </script>
     <title>딸랑! : 소상공인 가게 찾기</title>
     <script
       async
