feat: buy me a coffee

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="google-adsense-account" content="ca-pub-2200970422276014" />
     <!-- og -->
-    <meta property="og:title" content="딸랑! : 소상공인 가게 찾기" />
+    <meta property="og:title" content="딸랑! :: 소상공인 가게 찾기" />
     <meta property="og:url" content="https://smallshop-archive.web.app/" />
     <meta
       property="og:image"
@@ -21,7 +21,7 @@
     />
     <!-- twitter og -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="딸랑! : 소상공인 가게 찾기" />
+    <meta name="twitter:title" content="딸랑! :: 소상공인 가게 찾기" />
     <meta
       name="twitter:description"
       content="🔔 효녀들이 소개하는 부모님의 가게를 찾아보세요!"
@@ -44,7 +44,7 @@
 
       gtag("config", "G-EHT20J48WG")
     </script>
-    <title>딸랑! : 소상공인 가게 찾기</title>
+    <title>딸랑! :: 소상공인 가게 찾기</title>
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2200970422276014"
